2nd upload of html and css

--- a/index.html
+++ b/index.html
@@ -13,8 +13,27 @@
     </header>
 
     <a href="google.com">Download Excursion (Coming soon!)</a> 
-    </p>
     
+
+    <div class="vid-container">
+        <div class="video"> 
+            <video src="./resources/media/excursion.mp4">Video of App</video>
+        </div>
+    </div>
+
+    <div class="travel-guide" >
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you. </p>
+        <div class="img-container"> 
+            <img src="./resources/media/camp.jpg" alt="Campsite">
+        </div>
+    </div>
+
+    <footer>
+        <img class="phone" src="./resources/media/phone.png" alt="">
+        <h1>Coming Soon for iPhone and Android</h1>
+        <a href="google.com">Download Excursion (Coming soon!)</a> 
+    </footer>
 
 </body>
 
