second attempt at uploading latest html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        Discover hidden places in the world around you
+        <h1>Discover hidden places in the world around you</h1>
     </header>
 
     <a href="google.com">Download Excursion (Coming soon!)</a> 
@@ -28,11 +28,14 @@
             <img src="./resources/media/camp.jpg" alt="Campsite">
         </div>
     </div>
-
+    <br>
     <footer>
         <img class="phone" src="./resources/media/phone.png" alt="">
         <h1>Coming Soon for iPhone and Android</h1>
         <a href="google.com">Download Excursion (Coming soon!)</a> 
+        <div class="copyright">
+            <p>© Excursion</p>
+        </div>
     </footer>
 
 </body>
