--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
     <div class="vid-container">
         <div class="video"> 
-            <video src="./resources/media/excursion.mp4">Video of App</video>
+            <video muted="true" autoplay="autoplay"> 
+                <source src="./resources/media/excursion.mp4" type="video/mp4">
+            </video>
         </div>
     </div>
 
